tests/neg/pattern2.stk
type Student = #Student(name: String, sex: Bool, birthday: Int)
type Teacher = #Teacher(name: String, address: String, birthday: Int)

pattern WrongResType(s: String, age: Int): Student =
  #Teacher s age _  // error

pattern ResTypeNotEqual(s: String): Student | Teacher =  // error
  #Teacher s _ _

pattern UndefinedVar(addr: String): Teacher =
  #Teacher s addr _  // error

pattern DoubleBind(s: String): Teacher =
  #Teacher s s _  // error

pattern NoOccur(s: Int): Teacher = // error
  #Teacher _ _ _

pattern BindTypeMismatch(s: String): Student =
  #Student _ s _  // error

pattern BindTypeMismatch2(s: Student): Student =
  s: Teacher  // error // error

pattern FewerArgNumOK(name: String): Student =
  #Student name _

pattern Student(s: String, sex: Bool, age: Int): Student =
  #Student s sex age

pattern Name(name: String): Student =
  #Student name _ _

pattern Type(s: Student): Student = s: Student

fun test(s: Student) =
  match s
    case Name a b =>  // error

  match s
    case Student n s => // error

  match s
    case #Student name year sex class => // error
      println name

fun main = println "patterns"
